Added basic styling using base.css file and inline React component styling

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,10 +2,11 @@
     <head>
         <meta charset="utf-8">
         <title>Blockchain Feed</title>
+        <link rel="stylesheet" href="base.css">
     </head>
     <body>
         <div id="app" />
-        
+
         <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
         <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
         <script src="bundle.js" type="text/javascript"></script>
