Started Calculator component. Currently working with Bitcoin USD rate.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Blockchain Feed</title>
+        <title>Timelab Data</title>
         <link rel="stylesheet" href="base.css">
     </head>
     <body>
