Added SASS CSS for components with BEM naming convention

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <title>Timelab Data</title>
-        <link rel="stylesheet" href="base.css">
+        <!-- <link rel="stylesheet" href="base.css"> -->
     </head>
     <body>
         <div id="app" />
